# clo-implementation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
book/: CLO.cpp  CLO.h
engine/: Engine.cpp  Engine.h
models/: Entry.cpp  Entry.h  Limit.cpp  Limit.h  Order.cpp  Order.h  Trade.cpp  Trade.h
